--- a/en-GB.plg_flexicontent_fields_extratable.ini
+++ b/en-GB.plg_flexicontent_fields_extratable.ini
@@ -1,7 +1,17 @@
-; $Id: en-GB.plg_flexicontent_fields_weblink.ini 18 2009-06-14 11:15:49Z vistamedia $
-; author Emmanuel Danan
+; $Id: en-GB.plg_flexicontent_fields_extratable.ini 18 2009-06-14 11:15:49Z vistamedia $
+; author Yannick
 ; copyright (C) 2009 Emmanuel Danan - www.vistamedia.fr
 ; license GNU/GPL v2
 ; Note : All ini files need to be saved as UTF-8
 
+FLEXI_FIELD_EXTRATABLE="Champ FLEXIcontent de gestion et d'affichage des programmes immobiliers d'Amallia"
 
+;Parameters
+FLEXI_FIELD_PRECOUNT_TEXT="Pré-count"
+FLEXI_FIELD_PRECOUNT_TEXT_DESC="description de Pré-count ?"
+FLEXI_FIELD_POSTCOUNT_TEXT="Post-count"
+FLEXI_FIELD_POSTCOUNT_DESC="description de Pré-count ?"
+FLEXI_FIELD_LIENPLAN_TEXT="Lien Plan"
+FLEXI_FIELD_LIENPLAN_TEXT_DESC="description de Lien Plan ?"
+
+;TODO : a traduire en anglais !
