--- a/fr-FR.plg_flexicontent_fields_extratable.ini
+++ b/fr-FR.plg_flexicontent_fields_extratable.ini
@@ -8,8 +8,8 @@ FLEXI_FIELD_EXTRATABLE="Champ FLEXIcontent de gestion et d'affichage des program
 
 ;Parameters
 FLEXI_FIELD_PRECOUNT_TEXT="Pré-count"
-FLEXI_FIELD_PRECOUNT_TEXT_DESC="description de Pré-count en FR ?"
+FLEXI_FIELD_PRECOUNT_TEXT_DESC="Texte avant le comptage"
 FLEXI_FIELD_POSTCOUNT_TEXT="Post-count"
-FLEXI_FIELD_POSTCOUNT_DESC="description de Pré-count en FR ?"
+FLEXI_FIELD_POSTCOUNT_DESC="texte après le comptage"
 FLEXI_FIELD_LIENPLAN_TEXT="Lien Plan"
-FLEXI_FIELD_LIENPLAN_TEXT_DESC="description de Lien Plan en FR ?"
+FLEXI_FIELD_LIENPLAN_TEXT_DESC="code html pour le lien sur la zone de téléchargement du plan"
