--- a/fr-FR.plg_flexicontent_fields_extratable.ini
+++ b/fr-FR.plg_flexicontent_fields_extratable.ini
@@ -12,4 +12,4 @@ FLEXI_FIELD_PRECOUNT_TEXT_DESC="Texte avant le comptage"
 FLEXI_FIELD_POSTCOUNT_TEXT="Post-count"
 FLEXI_FIELD_POSTCOUNT_DESC="texte après le comptage"
 FLEXI_FIELD_LIENPLAN_TEXT="Lien Plan"
-FLEXI_FIELD_LIENPLAN_TEXT_DESC="code html pour le lien sur la zone de téléchargement du plan"
+FLEXI_FIELD_LIENPLAN_TEXT_DESC="code html après le lien sur la zone de téléchargement du plan (pour mettre un texte ou une image)"
