upload and design
adding upload function
new design
translation string

--- a/en-GB.plg_flexicontent_fields_extratable.ini
+++ b/en-GB.plg_flexicontent_fields_extratable.ini
@@ -7,11 +7,11 @@
 FLEXI_FIELD_EXTRATABLE="Champ FLEXIcontent de gestion et d'affichage des programmes immobiliers d'Amallia"
 
 ;Parameters
-FLEXI_FIELD_PRECOUNT_TEXT="Pré-count"
-FLEXI_FIELD_PRECOUNT_TEXT_DESC="description de Pré-count ?"
+FLEXI_FIELD_PRECOUNT_TEXT="Pre-count"
+FLEXI_FIELD_PRECOUNT_TEXT_DESC="Pre text for count value"
 FLEXI_FIELD_POSTCOUNT_TEXT="Post-count"
-FLEXI_FIELD_POSTCOUNT_DESC="description de Pré-count ?"
-FLEXI_FIELD_LIENPLAN_TEXT="Lien Plan"
-FLEXI_FIELD_LIENPLAN_TEXT_DESC="description de Lien Plan ?"
+FLEXI_FIELD_POSTCOUNT_DESC="Post text for count value"
+FLEXI_FIELD_LIENPLAN_TEXT="Pdf link"
+FLEXI_FIELD_LIENPLAN_TEXT_DESC="Add html code to link display"
+FLEXI_SELECT_FILE="Select File"
 
-;TODO : a traduire en anglais !
