--- a/en-GB.plg_flexicontent_fields_extratable.ini
+++ b/en-GB.plg_flexicontent_fields_extratable.ini
@@ -13,5 +13,5 @@ FLEXI_FIELD_POSTCOUNT_TEXT="Post-count"
 FLEXI_FIELD_POSTCOUNT_DESC="Post text for count value"
 FLEXI_FIELD_LIENPLAN_TEXT="Pdf link"
 FLEXI_FIELD_LIENPLAN_TEXT_DESC="Add html code to link display"
-FLEXI_SELECT_FILE="Select File"
+FLEXI_PDF="PDF"
 
