--- a/fr-FR.plg_flexicontent_fields_extratable.ini
+++ b/fr-FR.plg_flexicontent_fields_extratable.ini
@@ -13,4 +13,4 @@ FLEXI_FIELD_POSTCOUNT_TEXT="Post-count"
 FLEXI_FIELD_POSTCOUNT_DESC="texte après le comptage"
 FLEXI_FIELD_LIENPLAN_TEXT="Lien Plan"
 FLEXI_FIELD_LIENPLAN_TEXT_DESC="code html après le lien sur la zone de téléchargement du plan (pour mettre un texte ou une image)"
-FLEXI_SELECT_FILE="Sélectionner un fichier"
+FLEXI_PDF="PDF"
